--- a/12_inspeccin_de_trabajo_y_seguridad_social.html
+++ b/12_inspeccin_de_trabajo_y_seguridad_social.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" type="text/css" href="udl-content.css" />
 <script type="text/javascript" src="udl-content.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+	<script>$exe.options.atools.translator=true</script></head>
 <body class="exe-web-site exe-search-bar exe-atools" id="exe-node-5"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -123,13 +123,22 @@
 </tr>
 </tbody>
 </table>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1sTK6fVCjYUl_CNoQ_R22iOgOOeCb7lCE/view?usp=drive_link">Gestión práctica de Riesgos Laborales - La práctica de una inspección en prevención de riesgos laborales</a></span></td>
-</tr>
-</tbody>
-</table></div></div></section></div>
+</div></div></section></div>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper ParasabermasfpdIdevice em_iDevice em_iDevice_parasabermasfpd" id="id64">
+<div class="iDevice emphasis_parasabermasfpd" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Para saber más</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta64_144" class="block iDevice_content">
+<p>A continuación se muestra un enlace de interés relacionado con la Inspección de Trabajo y Seguridad Social:</p>
+<ul>
+<li><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1sTK6fVCjYUl_CNoQ_R22iOgOOeCb7lCE/view?usp=drive_link">Gestión práctica de Riesgos Laborales - La práctica de una inspección en prevención de riesgos laborales</a></span></li>
+</ul>
 </div>
 </div>
 </div>
