--- a/132_comisin_nacional_de_seguridad_y_salud_en_el_trabajo_cnsst.html
+++ b/132_comisin_nacional_de_seguridad_y_salud_en_el_trabajo_cnsst.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+	<script>$exe.options.atools.translator=true</script></head>
 <body class="exe-web-site exe-search-bar exe-atools" id="exe-node-8"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -87,15 +87,22 @@
 <li style="font-weight: 400; text-align: justify;" aria-level="1"><span style="font-weight: 400;">Criterios y programas generales de actuación.</span></li>
 <li style="font-weight: 400; text-align: justify;" aria-level="1"><span style="font-weight: 400;">Proyectos de disposiciones de carácter general.</span></li>
 <li style="font-weight: 400; text-align: justify;" aria-level="1"><span style="font-weight: 400;">Coordinación entre las Administraciones Públicas competente en materia laboral, sanitaria y de industria.</span></li>
+</ul></div>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper ParasabermasfpdIdevice em_iDevice em_iDevice_parasabermasfpd" id="id65">
+<div class="iDevice emphasis_parasabermasfpd" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Para saber más</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta65_144" class="block iDevice_content">
+<p>A continuación se muestra un enlace de interés relacionado con la Comisión Nacional de Seguridad y Salud en el Trabajo:</p>
+<ul>
+<li><span style="font-weight: 400;"><a href="https://www.insst.es/cnsst/grupos-de-trabajo/en-funcionamiento">Comisión Nacional de Seguridad y Salud en el Trabajo - Grupos de trabajo en funcionamiento</a></span></li>
 </ul>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://www.insst.es/cnsst/grupos-de-trabajo/en-funcionamiento">Comisión Nacional de Seguridad y Salud en el Trabajo - Grupos de trabajo en funcionamiento</a></span></td>
-</tr>
-</tbody>
-</table>
-<p></p></div>
 </div>
 </div>
 </div>
