--- a/21_asuncin_personal_por_el_empresario.html
+++ b/21_asuncin_personal_por_el_empresario.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+	<script>$exe.options.atools.translator=true</script></head>
 <body class="exe-web-site exe-search-bar exe-atools" id="exe-node-11"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -89,20 +89,6 @@
 <li style="font-weight: 400;" aria-level="2"><span style="font-weight: 400;">Que el empresario tenga la </span><b>capacidad </b><span style="font-weight: 400;">correspondiente a las funciones preventivas que va a desarrollar (como mínimo el nivel básico).</span></li>
 </ol>
 <p style="text-align: justify;"><span style="font-weight: 400;">El empresario puede asumir todas las funciones preventivas, <strong>salvo la vigilancia de la salud de los trabajadores</strong>. Las funciones preventivas que el empresario no asuma  deberán cubrirse mediante alguna de las restantes modalidades de organización preventiva (trabajadores designados o servicios de prevención). En cualquier caso, la vigilancia de la salud de los trabajadores será cubierta mediante el concierto con un Servicio de Prevención.</span></p>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1e-sB9jOebGf6q_cBwlag0gB-L8DXLne9/view?usp=drive_link">Asunción por el empresario - Preguntas y Respuestas</a> </span></td>
-</tr>
-</tbody>
-</table>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://www.prevencion10.es/">Prevencion10.es</a> </span></td>
-</tr>
-</tbody>
-</table>
 <figure class="exe-figure exe-media position-center license-standard-youtube" style="width: 560px;"><iframe width="560" height="315" src="https://www.youtube.com/embed/gcp4NVKYOc0" allowfullscreen="allowfullscreen"></iframe>
 <figcaption class="figcaption"><a href="https://www.youtube.com/@INSST" target="_blank" class="author" rel="noopener">INSST</a>. <a href="https://youtu.be/gcp4NVKYOc0?si=8eDqbjzHlR220vTD" target="_blank" class="title" rel="noopener"><em>¿Qué es Prevencion10.es?</em></a> <span class="license"><span class="sep">(</span><a href="https://www.youtube.com/static?template=terms" rel="license nofollow noopener" target="_blank">Licencia estándar de YouTube</a><span class="sep">)</span></span></figcaption>
 </figure></div>
@@ -198,6 +184,22 @@
 </section>
 </div>
 </section>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper ParasabermasfpdIdevice em_iDevice em_iDevice_parasabermasfpd" id="id66">
+<div class="iDevice emphasis_parasabermasfpd" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Para saber más</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta66_144" class="block iDevice_content">
+<p style="text-align: justify;">A continuación se muestran algunos enlaces de interés relacionados con la asunción personal por el empresario de la prevención de riesgos en la empresa:</p>
+<ul>
+<li><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1e-sB9jOebGf6q_cBwlag0gB-L8DXLne9/view?usp=drive_link">CCE - Asunción por el empresario: preguntas y respuestas</a></span></li>
+<li><span style="font-weight: 400;"><a href="https://www.prevencion10.es/">Prevencion10.es</a></span></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
