--- a/22_designacin_de_trabajadores.html
+++ b/22_designacin_de_trabajadores.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+	<script>$exe.options.atools.translator=true</script></head>
 <body class="exe-web-site exe-search-bar exe-atools" id="exe-node-12"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -144,6 +144,22 @@
 <figure class="exe-figure exe-image position-center license-CC-BY-NC-SA" style="width: 500px;"><img src="_d773bb9a-c01a-4f54-b39f-6633093c085a.jpg" alt="" width="500" height="500" hspace="auto" style="display: block; margin-left: auto; margin-right: auto;" />
 <figcaption class="figcaption"><a href="https://copilot.microsoft.com/" target="_blank" class="author" rel="noopener">Copilot</a>. <a href="https://www.bing.com/images/create/dos-trabajadores-conversando-en-una-f/1-660ea8d796224f16a1277ead9e850a3d?id=4C6pFUmfNQXBt51KcMJVdQ%3d%3d&amp;view=detailv2&amp;idpp=genimg&amp;thId=OIG3.0uDKjPlosVg4woiKwUr9&amp;FORM=GCRIDP&amp;ajaxhist=0&amp;ajaxserp=0" target="_blank" class="title" rel="noopener"><em>Dos trabajadores conversando en una fábrica</em></a> <span class="license"><span class="sep">(</span><a href="http://creativecommons.org/licenses/?lang=es" rel="license nofollow noopener" target="_blank" title="Creative Commons BY-NC-SA">CC BY-NC-SA</a><span class="sep">)</span></span></figcaption>
 </figure>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper ParasabermasfpdIdevice em_iDevice em_iDevice_parasabermasfpd" id="id67">
+<div class="iDevice emphasis_parasabermasfpd" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Para saber más</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta67_144" class="block iDevice_content">
+<p style="text-align: justify;">A continuación se muestran algunos enlaces de interés relacionados con la designación de trabajadores:</p>
+<ul>
+<li style="text-align: justify;"><a href="https://drive.google.com/file/d/1LSTIczwioFb1iJVFxS9cFQBUAo-fVV57/view?usp=drive_link">CCE - Trabajadores designados: preguntas y respuestas</a></li>
+<li style="text-align: justify;"><a href="https://drive.google.com/file/d/1CfRXK-AX7VOGarZl23tf3ZkOi84nmwmU/view">Gestión práctica de riesgos laborales - Los medios humanos de integración de la prevención: el trabajador designado</a></li>
+</ul>
 </div>
 </div>
 </div>
