--- a/231_servicio_de_prevencin_propio.html
+++ b/231_servicio_de_prevencin_propio.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+	<script>$exe.options.atools.translator=true</script></head>
 <body class="exe-web-site exe-search-bar exe-atools" id="exe-node-22"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -90,14 +90,7 @@
 <p style="text-align: justify;"><span style="font-weight: 400;">Además de estos supuestos obligatorios, <strong>cualquier empresa que lo desee</strong> puede, voluntariamente, constituir un SPP.</span></p>
 <figure class="exe-figure exe-image position-center" style="width: 700px;"><img src="Grafico_Mapa_Mental_Vacio_Dibujado_a_Mano_Para_Imprimir__(1).png" alt="" width="700" height="470" />
 <figcaption class="figcaption"><span class="author">Elaboración propia</span>. <span class="title"><em>Servicio de prevención propio</em></span></figcaption>
-</figure>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1kbKll5oiZ_VjIk375CALU-wrgooeGOJz/view?usp=drive_link">Servicio de prevención propio - Preguntas y Respuestas</a> </span></td>
-</tr>
-</tbody>
-</table></div>
+</figure></div>
 </div>
 </div>
 </div>
@@ -137,6 +130,21 @@
 <li style="font-weight: 400; text-align: justify;" aria-level="1"><b>Funciones no asumidas</b><span style="font-weight: 400;">: las actividades preventivas que no sean asumidas a través del servicio de prevención propio deberán ser concertadas con uno o más servicios de prevención ajenos.<br /><br /></span></li>
 <li style="font-weight: 400; text-align: justify;" aria-level="1"><b>Memoria y programación de actividades</b><span style="font-weight: 400;">: la empresa deberá elaborar anualmente y mantener a disposición de las autoridades laborales y sanitarias competentes, así como del Comité de Seguridad y Salud, la </span><b>memoria y programación</b><span style="font-weight: 400;"><strong> anual de las actividades</strong> desarrolladas.</span></li>
 </ul></div>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper ParasabermasfpdIdevice em_iDevice em_iDevice_parasabermasfpd" id="id68">
+<div class="iDevice emphasis_parasabermasfpd" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Para saber más</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta68_144" class="block iDevice_content">
+<p>A continuación se muestra un enlace de interés relacionado con los servicios de prevención propios:</p>
+<ul>
+<li><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1kbKll5oiZ_VjIk375CALU-wrgooeGOJz/view?usp=drive_link">CCE - Servicio de prevención propio - preguntas y respuestas</a></span></li>
+</ul>
 </div>
 </div>
 </div>
