--- a/2323_concierto_de_la_actividad_preventiva.html
+++ b/2323_concierto_de_la_actividad_preventiva.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+	<script>$exe.options.atools.translator=true</script></head>
 <body class="exe-web-site exe-search-bar exe-atools" id="exe-node-25"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -81,28 +81,7 @@
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta33_117_2" class="block iDevice_content">
-<div class="exe-text"><p style="text-align: justify;"><span style="font-weight: 400;">Si una empresa contrata los servicios de un SPA, debe formalizar la relación por escrito en un documento denominado <strong>concierto</strong> (<a href="https://www.boe.es/buscar/act.php?id=BOE-A-1997-1853#a20">art. 20 RSP</a>). El contenido del concierto entre el SPA y la empresa establece los términos y el alcance de los servicios contratados.</span></p>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/19KkjfTdcr013zRNRF0F-poJm6UY6IwLt/view?usp=drive_link">COELL - Guía de contratación de servicios de prevención ajenos</a> </span></td>
-</tr>
-</tbody>
-</table>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1nh_c8Plfo5aTyOrO9Ptgt6uGV63Kyudu/view?usp=drive_link">Modelo en blanco de concierto con SPA</a> </span></td>
-</tr>
-</tbody>
-</table>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1RVNQdKLmti7UfNqPwlrCa7I2o-vj95GN/view?usp=drive_link">Ejemplo de modelo de concierto con SPA</a> </span></td>
-</tr>
-</tbody>
-</table></div>
+<div class="exe-text"><p style="text-align: justify;"><span style="font-weight: 400;">Si una empresa contrata los servicios de un SPA, debe formalizar la relación por escrito en un documento denominado <strong>concierto</strong> (<a href="https://www.boe.es/buscar/act.php?id=BOE-A-1997-1853#a20">art. 20 RSP</a>). El contenido del concierto entre el SPA y la empresa establece los términos y el alcance de los servicios contratados.</span></p></div>
 </div>
 </div>
 </div>
@@ -122,7 +101,10 @@
 <li style="font-weight: 400;" aria-level="1"><span style="font-weight: 400;">Las </span><b>condiciones económicas del concierto</b><span style="font-weight: 400;">, con la expresa relación de las actividades o funciones preventivas no incluidas en aquellas condiciones.</span></li>
 <li style="font-weight: 400;" aria-level="1"><span style="font-weight: 400;">La obligación del servicio de prevención ajeno de asesorar al empresario, a los trabajadores y a sus representantes.</span></li>
 <li style="font-weight: 400;" aria-level="1"><span style="font-weight: 400;">Las actividades preventivas concretas que sean legalmente exigibles y que no quedan cubiertas por el concierto.</span></li>
-</ul></div>
+</ul>
+<figure class="exe-figure exe-image position-center" style="width: 500px;"><img src="b164eb52-f1fb-48a7-8d37-73e09a59b260.jpg" alt="" width="500" height="500" />
+<figcaption class="figcaption"><span class="author">Copilot. Elaboración propia</span>. <span class="title"><em>Negociación del contenido de un concierto con un SPA</em></span></figcaption>
+</figure></div>
 </div>
 </div>
 </div>
@@ -169,14 +151,25 @@
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta37_121_2" class="block iDevice_content">
-<div class="exe-text"><p style="text-align: justify;"><span style="font-weight: 400;">Los <strong>SPA</strong> deberán mantener <strong>a disposición de las autoridades laborales y sanitarias</strong> competentes una </span><strong>memoria anual </strong><span style="font-weight: 400;">en la que incluirán de forma separada las empresas o centros de trabajo a los que se ha prestado servicios durante dicho período, indicando en cada caso la naturaleza de éstos. </span><span style="font-weight: 400;">Igualmente,<strong> deberán facilitar a las empresas</strong> para las que actúen como servicios de prevención la </span><strong>memoria y la programación anual</strong><span style="font-weight: 400;"><strong> de actividades</strong>.</span></p>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1zkfSwaeajFl65cjivvLcCqBYUAv9Kzcz/view?usp=drive_link">Modelo de memoria anual de SPA</a> </span></td>
-</tr>
-</tbody>
-</table></div>
+<div class="exe-text"><p style="text-align: justify;"><span style="font-weight: 400;">Los <strong>SPA</strong> deberán mantener <strong>a disposición de las autoridades laborales y sanitarias</strong> competentes una </span><strong>memoria anual </strong><span style="font-weight: 400;">en la que incluirán de forma separada las empresas o centros de trabajo a los que se ha prestado servicios durante dicho período, indicando en cada caso la naturaleza de éstos. </span><span style="font-weight: 400;">Igualmente,<strong> deberán facilitar a las empresas</strong> para las que actúen como servicios de prevención la </span><strong>memoria y la programación anual</strong><span style="font-weight: 400;"><strong> de actividades</strong>.</span></p></div>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper ParasabermasfpdIdevice em_iDevice em_iDevice_parasabermasfpd" id="id71">
+<div class="iDevice emphasis_parasabermasfpd" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Para saber más</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta71_144" class="block iDevice_content">
+<p>A continuación se muestran algunos enlaces de interés relacionados con el concierto de la actividad preventiva con servicios de prevención:</p>
+<ul>
+<li><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/19KkjfTdcr013zRNRF0F-poJm6UY6IwLt/view?usp=drive_link">COELL - Guía de contratación de servicios de prevención ajenos</a></span></li>
+<li><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1nh_c8Plfo5aTyOrO9Ptgt6uGV63Kyudu/view?usp=drive_link">Modelo en blanco de concierto con SPA</a></span></li>
+<li><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1RVNQdKLmti7UfNqPwlrCa7I2o-vj95GN/view?usp=drive_link">Ejemplo de modelo de concierto con SPA</a></span></li>
+<li><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1zkfSwaeajFl65cjivvLcCqBYUAv9Kzcz/view?usp=drive_link">Modelo de memoria anual de SPA</a></span></li>
+</ul>
 </div>
 </div>
 </div>
