--- a/232_servicio_de_prevencin_ajeno.html
+++ b/232_servicio_de_prevencin_ajeno.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+	<script>$exe.options.atools.translator=true</script></head>
 <body class="exe-web-site exe-search-bar exe-atools" id="exe-node-14"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -88,13 +88,9 @@
 <li style="font-weight: 400;" aria-level="2"><span style="font-weight: 400;">Empresas con <strong>servicio de prevención propio</strong>, respecto de las <strong>actividades preventivas no asumidas por el mismo</strong> (por lo general, las relativas a vigilancia de la salud).</span></li>
 </ol>
 <p style="text-align: justify;"><span style="font-weight: 400;">La dirección de la empresa deberá consultar con los representantes de los trabajadores la decisión de concertar la actividad preventiva con uno o varios servicios de prevención ajenos.</span></p>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/15pAijF6NPnICvg-pcg1uk4CE68TyeBQl/view?usp=drive_link">Servicio de prevención ajeno - Preguntas y Respuestas</a> </span></td>
-</tr>
-</tbody>
-</table></div>
+<figure class="exe-figure exe-image position-center" style="width: 500px;"><img src="f7931cfc-9af0-4033-8008-1679a807b669.jpg" alt="" width="500" height="500" />
+<figcaption class="figcaption"><span class="author">Copilot. Elaboración propia</span>. <span class="title"><em>Trabajadores recibiendo formación en un SPA</em></span></figcaption>
+</figure></div>
 </div>
 </div>
 </div>
