--- a/233_servicio_de_prevencin_mancomunado.html
+++ b/233_servicio_de_prevencin_mancomunado.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+	<script>$exe.options.atools.translator=true</script></head>
 <body class="exe-web-site exe-search-bar exe-atools" id="exe-node-15"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -87,14 +87,7 @@
 <li style="font-weight: 400;" aria-level="2"><span style="font-weight: 400;">Empresas pertenecientes a un <strong>mismo sector productivo o grupo empresarial</strong> o que desarrollen sus actividades en un <strong>área geográfica limitada</strong>.</span></li>
 </ol>
 <p style="text-align: justify;"><span style="font-weight: 400;">El acuerdo de constitución del servicio mancomunado deberá adoptarse previa </span><span style="font-weight: 400;">consulta a los representantes legales de los trabajadores</span><span style="font-weight: 400;"> de cada una de las empresas afectadas Los servicios de prevención mancomunados deberán contar con medios técnicos y humanos para ofrecer servicios de, al menos, <strong>tres especialidades en materia preventiva</strong>, así como  disponer de medios análogos a los de los servicios de prevención propios.</span></p>
-<p style="text-align: justify;"><span style="font-weight: 400;">En la región de Murcia existe, entre otros, el Servicio de Prevención Mancomunado del sector de las Conservas Vegetales (<a href="https://fecoam.es/prevencion-de-riesgos-laborales/">FECOAM</a>).</span></p>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1w5gdgNAvi-0bZ_0z2WgjKRR4ZVkN4yAB/view?usp=drive_link">Servicio de prevención mancomunado - Preguntas y Respuestas</a> </span></td>
-</tr>
-</tbody>
-</table></div>
+<p style="text-align: justify;"><span style="font-weight: 400;">En la región de Murcia existe, entre otros, el Servicio de Prevención Mancomunado del sector de las Conservas Vegetales (<a href="https://fecoam.es/prevencion-de-riesgos-laborales/">FECOAM</a>).</span></p></div>
 </div>
 </div>
 </div>
@@ -111,6 +104,21 @@
 <figure class="exe-figure exe-media position-center license-CC-BY-NC-SA" style="width: 1200pxpx;"><iframe width="1200px" height="675px" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genial.ly/5fa6d13ccb9a580cfa4a6411" allowfullscreen="allowfullscreen"></iframe></figure>
 </div>
 <a href="https://genial.ly/" target="_blank" class="author" rel="noopener">Genial.ly. Elo Jopjor</a>. <a href="https://view.genial.ly/5fa6d13ccb9a580cfa4a6411" target="_blank" class="title" rel="noopener"><em>Modalidades preventivas</em></a> <span class="license"><span class="sep">(</span><a href="http://creativecommons.org/licenses/?lang=es" rel="license nofollow noopener" target="_blank" title="Creative Commons BY-NC-SA">CC BY-NC-SA</a><span class="sep">)</span></span></div></div>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper ParasabermasfpdIdevice em_iDevice em_iDevice_parasabermasfpd" id="id72">
+<div class="iDevice emphasis_parasabermasfpd" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Para saber más</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta72_144" class="block iDevice_content">
+<p>A continuación se muestra un enlace de interés relacionado con los servicios de prevención mancomunados:</p>
+<ul>
+<li><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1w5gdgNAvi-0bZ_0z2WgjKRR4ZVkN4yAB/view?usp=drive_link">CCE - Servicio de prevención mancomunado - preguntas y respuestas</a></span></li>
+</ul>
 </div>
 </div>
 </div>
