--- a/3_los_recursos_preventivos.html
+++ b/3_los_recursos_preventivos.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+	<script>$exe.options.atools.translator=true</script></head>
 <body class="exe-web-site exe-search-bar exe-atools" id="exe-node-18"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -99,28 +99,7 @@
 </ol>
 <figure class="exe-figure exe-media position-center license-standard-youtube" style="width: 560px;"><iframe width="560" height="315" src="https://www.youtube.com/embed/7oDEPaS65Uk" allowfullscreen="allowfullscreen"></iframe>
 <figcaption class="figcaption"><a href="https://www.youtube.com/@FORMACIONPREVENCION" target="_blank" class="author" rel="noopener">Formación Prevención</a>. <a href="https://youtu.be/7oDEPaS65Uk?si=kgeAaDe3oon1f0Uf" target="_blank" class="title" rel="noopener"><em>Recurso preventivo</em></a> <span class="license"><span class="sep">(</span><a href="https://www.youtube.com/static?template=terms" rel="license nofollow noopener" target="_blank">Licencia estándar de YouTube</a><span class="sep">)</span></span></figcaption>
-</figure>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://www.insst.es/documents/94886/327567/ntp-994+w.pdf/1d0e9a95-0930-4987-a2f2-3e759e9144e2">NTP 994 - El recurso preventivo</a> </span></td>
-</tr>
-</tbody>
-</table>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1RITy_Io7uuijVcTET0WkiBxkkP1BbfOz/view?usp=drive_link">El recurso preventivo - Preguntas y Respuestas</a> </span></td>
-</tr>
-</tbody>
-</table>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://www.mites.gob.es/Itss/ITSS/ITSS_Descargas/Atencion_ciudadano/Criterios_tecnicos/CT_83-2010.pdf">Criterio técnico 83/10 de la Inspección de Trabajo sobre la presencia de recursos preventivos</a> </span></td>
-</tr>
-</tbody>
-</table></div>
+</figure></div>
 </div>
 </div>
 </div>
@@ -180,6 +159,23 @@
 <li style="font-weight: 400; text-align: justify;" aria-level="1"><span style="font-weight: 400;">Disponer de los <strong>medios necesarios</strong>. </span></li>
 <li style="font-weight: 400; text-align: justify;" aria-level="1"><span style="font-weight: 400;">Ser <strong>suficientes en número</strong> para vigilar el cumplimiento de las actividades preventivas, </span><span style="font-weight: 400;">debiendo permanecer en el centro de trabajo durante el tiempo en que se mantenga la situación que determine su presencia.</span></li>
 </ul></div>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper ParasabermasfpdIdevice em_iDevice em_iDevice_parasabermasfpd" id="id73">
+<div class="iDevice emphasis_parasabermasfpd" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Para saber más</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta73_144" class="block iDevice_content">
+<p>A continuación se muestran algunos enlaces de interés relacionados con la figura del recurso preventivo:</p>
+<ul>
+<li><span style="font-weight: 400;"><a href="https://www.insst.es/documents/94886/327567/ntp-994+w.pdf/1d0e9a95-0930-4987-a2f2-3e759e9144e2">INSST. NTP 994 - El recurso preventivo</a></span></li>
+<li><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1RITy_Io7uuijVcTET0WkiBxkkP1BbfOz/view?usp=drive_link">CCE - El recurso preventivo: preguntas y respuestas</a></span></li>
+<li><span style="font-weight: 400;"><a href="https://www.mites.gob.es/Itss/ITSS/ITSS_Descargas/Atencion_ciudadano/Criterios_tecnicos/CT_83-2010.pdf">ITSS - Criterio técnico 83/10 sobre la presencia de recursos preventivos</a></span></li>
+</ul>
 </div>
 </div>
 </div>
