--- a/42_delegados_de_prevencin.html
+++ b/42_delegados_de_prevencin.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+	<script>$exe.options.atools.translator=true</script></head>
 <body class="exe-web-site exe-search-bar exe-atools" id="exe-node-20"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -125,13 +125,6 @@
 <td style="width: 20.3986%; text-align: center;">8</td>
 </tr>
 </tbody>
-</table>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1sPyVYhd51lJe-PN2aERPTyqS2IP2RsHi/view?usp=drive_link">Acta de designación de delegados de prevención</a> </span></td>
-</tr>
-</tbody>
 </table></div>
 </div>
 </div>
@@ -223,6 +216,21 @@
 <li style="font-weight: 400;" aria-level="1"><strong>No ser discriminado</strong><span style="font-weight: 400;"> en su promoción <strong>económica o profesional</strong>, en razón del desempeño de su cargo.</span></li>
 <li style="font-weight: 400;" aria-level="1"><span style="font-weight: 400;">En caso de </span><strong>despido improcedente</strong><span style="font-weight: 400;"><strong>, derecho de opción</strong> entre la readmisión o la indemnización .</span></li>
 </ol></div>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper ParasabermasfpdIdevice em_iDevice em_iDevice_parasabermasfpd" id="id74">
+<div class="iDevice emphasis_parasabermasfpd" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Para saber más</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta74_144" class="block iDevice_content">
+<p>A continuación se muestra un enlace de interés relacionado con la designación de los delegados de prevención:</p>
+<ul>
+<li><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1sPyVYhd51lJe-PN2aERPTyqS2IP2RsHi/view?usp=drive_link">CARM - Acta de designación de delegados de prevención</a></span></li>
+</ul>
 </div>
 </div>
 </div>
