--- a/43_comit_de_seguridad_y_salud.html
+++ b/43_comit_de_seguridad_y_salud.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" type="text/css" href="relaciona-activity.css" />
 <script type="text/javascript" src="relaciona-activity.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+	<script>$exe.options.atools.translator=true</script></head>
 <body class="exe-web-site exe-search-bar exe-atools" id="exe-node-21"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
@@ -86,27 +86,6 @@
 <div class="exe-text"><p style="text-align: justify;"><span style="font-weight: 400;">Este comité (CSS) es el órgano<strong> paritario y colegiado</strong> de participación destinado a la consulta regular y periódica de las actuaciones de la empresa en materia de prevención de riesgos, debiendo constituirse en los centros de trabajo o empresas que cuenten con <strong>50 o más trabajadores</strong> (<a href="https://www.boe.es/buscar/act.php?id=BOE-A-1995-24292#a38">art. 38 LPRL</a>).</span></p>
 <p style="text-align: justify;"><span style="font-weight: 400;">El CSS estará integrado <strong>paritariamente</strong> (es decir, con el mismo número de componentes) por los Delegados de Prevención, por una parte, y por el empresario y/o sus representantes, por otra. </span></p>
 <p style="text-align: justify;"><span style="font-weight: 400;">El Comité </span><span style="font-weight: 400;">se reunirá <strong>trimestralmente</strong></span><span style="font-weight: 400;"> y cuando lo<strong> pida  alguno de sus miembros</strong>. En las reuniones del Comité de Seguridad y Salud participarán, </span><span style="font-weight: 400;">con <strong>voz pero sin voto</strong></span><span style="font-weight: 400;">, los <strong>Delegados Sindicales</strong> y los <strong>responsables técnicos de la prevención</strong> en la empresa que no estén incluidos en el CSS. En las mismas condiciones podrán participar trabajadores de la empresa que cuenten con una especial cualificación o información respecto de concretas cuestiones que se debatan en este órgano y técnicos en prevención ajenos a la empresa, siempre que así lo solicite alguna de las representaciones en el Comité.</span></p>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1FvgJ2ZOVbGOOvIczfc7UuknTE7pe3clZ/view?usp=drive_link">USO - Acta de constitución del Comité de Seguridad y Salud</a> </span></td>
-</tr>
-</tbody>
-</table>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://docs.google.com/document/d/15F5eMUyrPEeRV76V0T0_-C87xuoRNWG1/edit?usp=drive_link&amp;ouid=114523228504449818772&amp;rtpof=true&amp;sd=true">Acta de reunión del Comité de Seguridad y Salud</a> </span></td>
-</tr>
-</tbody>
-</table>
-<table border="1" style="width: 64.6392%; height: 26px;" class="exe-table">
-<tbody>
-<tr style="height: 26px;">
-<td style="width: 100%; background-color: #bfe3e0; text-align: center; height: 26px;"><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1wZKDTczK7uNSGyonAs_DlcpdaKCOsAk8/view?usp=drive_link">Confederación canaria de empresarios - Modelo de normas de funcionamiento del Comité de Seguridad y Salud</a> </span></td>
-</tr>
-</tbody>
-</table>
 <p style="text-align: center;"></p></div>
 </div>
 </div>
@@ -153,6 +132,24 @@
 <div class="iDevice_content_wrapper">
 <div id="ta61_127_2" class="block iDevice_content">
 <div class="relaciona-IDevice"><div class="relaciona-instructions gameQP-instructions"><p>Relaciona cada empresa con la representación correspondiente.</p></div><div class="relaciona-DataGame js-hidden">{"typeGame":"Relaciona","author":"Elaboración propia","randomCards":true,"instructions":"<p>Relaciona cada empresa con la representación correspondiente.</p>","showMinimize":true,"itinerary":{"showClue":false,"clueGame":"","percentageClue":40,"showCodeAccess":false,"codeAccess":"","messageCodeAccess":""},"cardsGame":[{"url":"","x":0,"y":0,"author":"","alt":"","audio":"","color":"#000000","backcolor":"#ffffff","eText":"Empresa%20de%20110%20trabajadores","urlBk":"","xBk":0,"yBk":0,"authorBk":"","altBk":"","audioBk":"","colorBk":"#000000","backcolorBk":"#ffffff","eTextBk":"3%20delegados%20de%20prevenci%C3%B3n"},{"url":"","x":0,"y":0,"author":"","alt":"","audio":"","color":"#000000","backcolor":"#ffffff","eText":"Empresa%20de%204800%20trabajadores","urlBk":"","xBk":0,"yBk":0,"authorBk":"","altBk":"","audioBk":"","colorBk":"#000000","backcolorBk":"#ffffff","eTextBk":"Comit%C3%A9%20de%20seguridad%20y%20salud%20de%2016%20miembros"},{"url":"","x":0,"y":0,"author":"","alt":"","audio":"","color":"#000000","backcolor":"#ffffff","eText":"Empresa%20de%2025%20trabajadores","urlBk":"","xBk":0,"yBk":0,"authorBk":"","altBk":"","audioBk":"","colorBk":"#000000","backcolorBk":"#ffffff","eTextBk":"1%20delegado%20de%20prevenci%C3%B3n%20(delegado%20de%20personal)"},{"url":"","x":0,"y":0,"author":"","alt":"","audio":"","color":"#000000","backcolor":"#ffffff","eText":"Empresa%20de%203400%20trabajadores","urlBk":"","xBk":0,"yBk":0,"authorBk":"","altBk":"","audioBk":"","colorBk":"#000000","backcolorBk":"#ffffff","eTextBk":"7%20delegados%20de%20prevenci%C3%B3n"},{"url":"","x":0,"y":0,"author":"","alt":"","audio":"","color":"#000000","backcolor":"#ffffff","eText":"Empresa%20de%2072%20trabajadores","urlBk":"","xBk":0,"yBk":0,"authorBk":"","altBk":"","audioBk":"","colorBk":"#000000","backcolorBk":"#ffffff","eTextBk":"2%20delegados%20de%20prevenci%C3%B3n"},{"url":"","x":0,"y":0,"author":"","alt":"","audio":"","color":"#000000","backcolor":"#ffffff","eText":"Empresa%20de%20425%20trabajadores","urlBk":"","xBk":0,"yBk":0,"authorBk":"","altBk":"","audioBk":"","colorBk":"#000000","backcolorBk":"#ffffff","eTextBk":"3%20delegados%20de%20prevenci%C3%B3n"}],"isScorm":0,"textButtonScorm":"Guardar la puntuación","repeatActivity":false,"textAfter":"","version":1.3,"percentajeCards":100,"type":2,"showSolution":true,"timeShowSolution":3,"time":2,"evaluation":false,"evaluationID":"","id":"202444142546-120","msgs":{"msgSubmit":"Enviar","msgClue":"¡Genial! La pista es:","msgCodeAccess":"Código de acceso","msgPlayStart":"Pulse aquí para jugar","msgScore":"Puntuación","msgErrors":"Errores","msgHits":"Aciertos","msgMinimize":"Minimizar","msgMaximize":"Maximizar","msgFullScreen":"Pantalla Completa","msgExitFullScreen":"Salir del modo pantalla completa","msgNoImage":"Pregunta sin imágenes","msgEndGameScore":"Antes de guardar la puntuación comience la partida.","msgScoreScorm":"La puntuación no se puede guardar porque esta página no forma parte  de un paquete SCORM.","msgOnlySaveScore":"¡Sólo puede guardar la puntuación una vez!","msgOnlySave":"Sólo puede guardar una vez","msgInformation":"Información","msgYouScore":"Su puntuación","msgAuthor":"Autoría","msgOnlySaveAuto":"Su puntuación se guardará después de cada pregunta. Sólo puede jugar una vez.","msgSaveAuto":"Su puntuación se guardará automáticamente después de cada pregunta.","msgSeveralScore":"Puede guardar la puntuación tantas veces como quiera","msgYouLastScore":"La última puntuación guardada es","msgActityComply":"Ya ha realizado esta actividad.","msgPlaySeveralTimes":"Puede realizar esta actividad cuantas veces quiera","msgClose":"Cerrar","msgAudio":"Audio","msgNumQuestions":"Número de tarjetas","msgTryAgain":"Necesita al menos un %s% de respuestas correctas para conseguir la información. Vuelva a intentarlo.","msgEndGameM":"Has completado el juego. Tu puntuación es %s.","msgUncompletedActivity":"Actividad no completada","msgSuccessfulActivity":"Actividad superada. Puntuación: %s","msgUnsuccessfulActivity":"Actividad no superada. Puntuación: %s","msgTypeGame":"Relaciona","msgCheck":"Comprobar","msgRestart":"Reiniciar"}}</div><div class="relaciona-bns js-hidden">Su navegador no es compatible con esta herramienta.</div></div>
+</div>
+</div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper ParasabermasfpdIdevice em_iDevice em_iDevice_parasabermasfpd" id="id76">
+<div class="iDevice emphasis_parasabermasfpd" >
+<header class="iDevice_header"><h1 class="iDeviceTitle">Para saber más</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta76_144" class="block iDevice_content">
+<p>A continuación se muestran algunos enlaces de interés relacionados con los comités de seguridad y salud:</p>
+<ul>
+<li><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1FvgJ2ZOVbGOOvIczfc7UuknTE7pe3clZ/view?usp=drive_link">USO - Acta de constitución del Comité de Seguridad y Salud</a></span></li>
+<li><span style="font-weight: 400;"><a href="https://docs.google.com/document/d/15F5eMUyrPEeRV76V0T0_-C87xuoRNWG1/edit?usp=drive_link&amp;ouid=114523228504449818772&amp;rtpof=true&amp;sd=true">Modelo de acta de reunión del Comité de Seguridad y Salud</a></span></li>
+<li><span style="font-weight: 400;"><a href="https://drive.google.com/file/d/1wZKDTczK7uNSGyonAs_DlcpdaKCOsAk8/view?usp=drive_link">CCE - Modelo de normas de funcionamiento del Comité de Seguridad y Salud</a></span></li>
+</ul>
+<p></p>
 </div>
 </div>
 </div>
