--- a/2_modalidades_de_organizacin_preventiva.html
+++ b/2_modalidades_de_organizacin_preventiva.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" type="text/css" href="completa-activity.css" />
 <script type="text/javascript" src="completa-activity.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+	<script>$exe.options.atools.translator=true</script></head>
 <body class="exe-web-site exe-search-bar exe-atools" id="exe-node-17"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
