--- a/_ficha_tcnica_y_descarga_.html
+++ b/_ficha_tcnica_y_descarga_.html
@@ -16,7 +16,7 @@
 <script type="text/javascript" src="common.js"></script>
 <link rel="stylesheet" type="text/css" href="download-package.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+	<script>$exe.options.atools.translator=true</script></head>
 <body class="exe-web-site exe-search-bar exe-atools" id="exe-node-26"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
